--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -107,6 +107,7 @@ module:
   paragraphs_type_permissions: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   pdfpreview: 0
   purge: 0
   purge_queuer_coretags: 0
