--- a/config/clecotools/default/search_api.index.acquia_search_index.yml
+++ b/config/clecotools/default/search_api.index.acquia_search_index.yml
@@ -35,6 +35,7 @@ dependencies:
     - search_api_solr
     - file
     - media
+    - taxonomy
     - paragraphs
     - node
     - content_moderation
@@ -567,6 +568,16 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_product_classifications
+  product_category_name:
+    label: 'Product Category » Taxonomy term » Name'
+    datasource_id: 'entity:media'
+    property_path: 'field_product_category:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.media.field_product_category
+      module:
+        - taxonomy
   product_family:
     label: 'Product Family'
     property_path: product_family
