--- a/config/apextoolgroup/default/core.entity_form_display.node.faq.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.faq.default.yml
@@ -1,25 +1,21 @@
-uuid: 0bd525f0-15e3-4f05-a94d-475648516c9f
+uuid: 9e58d0ba-0cd3-4e02-819b-d8e0871f9a29
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.slider.body
-    - field.field.node.slider.field_banner_image
-    - field.field.node.slider.field_slider_link
-    - node.type.slider
+    - field.field.node.faq.body
+    - node.type.faq
   module:
-    - link
-    - media_library
     - path
     - text
-id: node.slider.default
+id: node.faq.default
 targetEntityType: node
-bundle: slider
+bundle: faq
 mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 27
+    weight: 121
     region: content
     settings:
       rows: 9
@@ -29,62 +25,47 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_banner_image:
-    type: media_library_widget
-    weight: 9
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
-  field_slider_link:
-    type: link_default
-    weight: 26
-    region: content
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 15
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 120
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 5
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
@@ -92,7 +73,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -101,7 +82,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 7
+    weight: 50
     region: content
     settings: {  }
     third_party_settings: {  }
