--- a/config/apextoolgroup/default/core.entity_form_display.node.homepage_products.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.homepage_products.default.yml
@@ -1,25 +1,24 @@
-uuid: 0bd525f0-15e3-4f05-a94d-475648516c9f
+uuid: bdd64e4b-a4d4-4c20-b27a-f4030c0423b5
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.slider.body
-    - field.field.node.slider.field_banner_image
-    - field.field.node.slider.field_slider_link
-    - node.type.slider
+    - field.field.node.homepage_products.body
+    - field.field.node.homepage_products.field_media
+    - field.field.node.homepage_products.field_read_more
+    - node.type.homepage_products
   module:
     - link
-    - media_library
     - path
     - text
-id: node.slider.default
+id: node.homepage_products.default
 targetEntityType: node
-bundle: slider
+bundle: homepage_products
 mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 27
+    weight: 121
     region: content
     settings:
       rows: 9
@@ -29,20 +28,23 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_banner_image:
-    type: media_library_widget
-    weight: 9
+  field_media:
+    type: entity_reference_autocomplete
+    weight: 122
     region: content
     settings:
-      media_types: {  }
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-  field_slider_link:
+  field_read_more:
     type: link_default
-    weight: 26
+    weight: 123
     region: content
     settings:
       placeholder_url: ''
@@ -50,41 +52,41 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 15
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 120
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 5
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
@@ -92,7 +94,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -101,7 +103,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 7
+    weight: 50
     region: content
     settings: {  }
     third_party_settings: {  }
