--- a/config/clecotools/default/easy_breadcrumb.settings.yml
+++ b/config/clecotools/default/easy_breadcrumb.settings.yml
@@ -29,7 +29,7 @@ capitalizator_forced_words:
   - Array
 capitalizator_forced_words_case_sensitivity: false
 capitalizator_forced_words_first_letter: false
-follow_redirects: true
+follow_redirects: false
 limit_segment_display: false
 segment_display_limit: null
 truncator_mode: false
