APEX-534: Changed media kit asset on article CT

--- a/config/clecotools/default/field.field.paragraph.media_kit.field_media_kit_asset.yml
+++ b/config/clecotools/default/field.field.paragraph.media_kit.field_media_kit_asset.yml
@@ -1,4 +1,4 @@
-uuid: 4574567c-5264-4187-b05f-67a10c78f816
+uuid: 4c9ee567-b4c1-4e65-80e1-20b9686f2c53
 langcode: en
 status: true
 dependencies:
@@ -23,6 +23,7 @@ settings:
       file: file
     sort:
       field: _none
+      direction: ASC
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
