--- a/config/clecotools/default/core.entity_form_display.paragraph.media_kit.default.yml
+++ b/config/clecotools/default/core.entity_form_display.paragraph.media_kit.default.yml
@@ -3,30 +3,22 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser
     - field.field.paragraph.media_kit.field_media_kit_asset
     - field.field.paragraph.media_kit.field_media_kit_enable
     - paragraphs.paragraphs_type.media_kit
   module:
-    - entity_browser
+    - media_library
 id: paragraph.media_kit.default
 targetEntityType: paragraph
 bundle: media_kit
 mode: default
 content:
   field_media_kit_asset:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 1
     region: content
     settings:
-      entity_browser: media_entity_browser
-      field_widget_display: label
-      field_widget_edit: true
-      field_widget_remove: true
-      field_widget_replace: false
-      open: true
-      field_widget_display_settings: {  }
-      selection_mode: selection_append
+      media_types: {  }
     third_party_settings: {  }
   field_media_kit_enable:
     type: boolean_checkbox
