--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_gb.yml
@@ -163,6 +163,7 @@ process:
     plugin: cleco_map_product_images
     source: remote_product_primary_image
     migration_instance: cleco_product_media_gb
+    skip_primary_list: 1
     asset_type:
       - Beauty-Glamour Image
       - Cutaway Image
