[APEX-230] Add title and link overrides for featured products

--- a/config/clecotools/default/field.field.paragraph.featured_product_item.field_product.yml
+++ b/config/clecotools/default/field.field.paragraph.featured_product_item.field_product.yml
@@ -1,17 +1,17 @@
-uuid: 782ccf3d-5bb8-427b-8f8f-6e425045881f
+uuid: 3e627eaa-32d3-4264-acdb-da27ade06a44
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_featured_products_list
+    - field.storage.paragraph.field_product
     - node.type.enhanced_product
     - node.type.product
-    - paragraphs.paragraphs_type.featured_products
-id: paragraph.featured_products.field_featured_products_list
-field_name: field_featured_products_list
+    - paragraphs.paragraphs_type.featured_product_item
+id: paragraph.featured_product_item.field_product
+field_name: field_product
 entity_type: paragraph
-bundle: featured_products
-label: 'Featured Products'
+bundle: featured_product_item
+label: Product
 description: ''
 required: false
 translatable: false
