--- a/config/apextoolgroup/default/core.entity_form_display.node.office.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.office.default.yml
@@ -1,24 +1,25 @@
-uuid: 5b0c469d-2524-4bf4-bbd6-3eb3b0ceb456
+uuid: 2da3ed64-459e-4c39-9aff-76be6851d0ad
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.employee_profile.body
-    - field.field.node.employee_profile.field_employee_designation
-    - field.field.node.employee_profile.field_employee_photo
-    - field.field.node.employee_profile.field_employee_type
-    - field.field.node.employee_profile.field_mail_address
-    - field.field.node.employee_profile.field_phone
-    - field.field.node.employee_profile.field_short_description
-    - node.type.employee_profile
+    - field.field.node.office.body
+    - field.field.node.office.field_address
+    - field.field.node.office.field_category
+    - field.field.node.office.field_location
+    - field.field.node.office.field_phone
+    - field.field.node.office.field_read_more
+    - node.type.office
   module:
-    - media_library
+    - address
+    - geolocation_google_maps
+    - link
     - path
     - telephone
     - text
-id: node.employee_profile.default
+id: node.office.default
 targetEntityType: node
-bundle: employee_profile
+bundle: office
 mode: default
 content:
   body:
@@ -37,7 +38,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_employee_designation:
+  field_address:
+    type: address_default
+    weight: 123
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_category:
     type: entity_reference_autocomplete
     weight: 124
     region: content
@@ -47,45 +54,55 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_employee_photo:
-    type: media_library_widget
+  field_location:
+    type: geolocation_googlegeocoder
     weight: 122
     region: content
     settings:
-      media_types: {  }
+      auto_client_location: ''
+      auto_client_location_marker: ''
+      allow_override_map_settings: 0
+      hide_textfield_form: false
+      centre:
+        fit_bounds:
+          enable: true
+      google_map_settings:
+        map_features:
+          marker_infowindow:
+            enabled: true
+          control_locate:
+            enabled: true
+          control_zoom:
+            enabled: true
+          control_maptype:
+            enabled: true
+          control_geocoder:
+            weight: -100
+            enabled: true
+          control_recenter:
+            enabled: true
+        type: ROADMAP
+        zoom: 10
+        minZoom: 0
+        maxZoom: 20
+        height: 400px
+        width: 100%
+        gestureHandling: auto
     third_party_settings: {  }
-  field_employee_type:
-    type: entity_reference_autocomplete
-    weight: 125
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_mail_address:
-    type: email_default
+  field_phone:
+    type: telephone_default
     weight: 126
     region: content
     settings:
       placeholder: ''
-      size: 60
     third_party_settings: {  }
-  field_phone:
-    type: telephone_default
-    weight: 127
+  field_read_more:
+    type: link_default
+    weight: 125
     region: content
     settings:
-      placeholder: ''
-    third_party_settings: {  }
-  field_short_description:
-    type: text_textarea
-    weight: 123
-    region: content
-    settings:
-      rows: 5
-      placeholder: ''
+      placeholder_url: ''
+      placeholder_title: ''
     third_party_settings: {  }
   langcode:
     type: language_select
