--- a/config/apextoolgroup/default/core.entity_view_display.node.employee_profile.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.employee_profile.teaser.yml
@@ -8,6 +8,8 @@ dependencies:
     - field.field.node.employee_profile.field_employee_designation
     - field.field.node.employee_profile.field_employee_photo
     - field.field.node.employee_profile.field_employee_type
+    - field.field.node.employee_profile.field_mail_address
+    - field.field.node.employee_profile.field_phone
     - field.field.node.employee_profile.field_short_description
     - node.type.employee_profile
   module:
@@ -35,6 +37,8 @@ hidden:
   field_employee_designation: true
   field_employee_photo: true
   field_employee_type: true
+  field_mail_address: true
+  field_phone: true
   field_short_description: true
   langcode: true
   search_api_excerpt: true
