APEX-536: Add new options in contact form

--- a/config/clecotools/default/webform.webform.schedule_a_demo.yml
+++ b/config/clecotools/default/webform.webform.schedule_a_demo.yml
@@ -59,6 +59,17 @@ elements: |-
       'Cleco CellCore Cordless Nutrunners': 'Cleco CellCore Cordless Nutrunners'
       'Cleco NeoTek Corded Assembly Tools': 'Cleco NeoTek Corded Assembly Tools'
       'Cleco DGD Intelligent Spindles': 'Cleco DGD Intelligent Spindles'
+      'Pneumatic Nutrunners & Screwdrivers': 'Pneumatic Nutrunners & Screwdrivers'
+      'Pneumatic Drilling': 'Pneumatic Drilling'
+      'Air Motors': 'Air Motors'
+      Spindles: Spindles
+      'Rivet Tools': 'Rivet Tools'
+      'Torque Wrenches': 'Torque Wrenches'
+      'Corded Tightening': 'Corded Tightening'
+      'Cordless Tightening': 'Cordless Tightening'
+      'Die Grinder': 'Die Grinder'
+      'Medium / Large Grinders': 'Medium / Large Grinders'
+      Controllers: Controllers
     '#empty_option': '- Select -'
     '#required': true
   captcha:
