APEX-526: Password policy and Imperva cache purger.

--- a/composer.json
+++ b/composer.json
@@ -110,6 +110,7 @@
         "drupal/imageapi_optimize_resmushit": "^2.0@beta",
         "drupal/imageapi_optimize_webp": "^2.0@beta",
         "drupal/imagemagick": "^3.4",
+        "drupal/imperva_cache_purger": "^1.0@alpha",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui": "^1.4",
         "drupal/jquery_ui_sortable": "^1.1",
@@ -133,6 +134,7 @@
         "drupal/node_view_permissions": "^1.5",
         "drupal/paragraphs": "^1.x-dev",
         "drupal/paragraphs_ee": "1.x-dev@dev",
+        "drupal/password_policy": "^4.0",
         "drupal/path_redirect_import": "1.x-dev",
         "drupal/pathauto": "^1.11",
         "drupal/pdfpreview": "^1.0",
