--- a/config/clecotools/default/config_ignore.settings.yml
+++ b/config/clecotools/default/config_ignore.settings.yml
@@ -4,3 +4,4 @@ ignored_config_entities:
   - system.site
   - language.negotiation
   - google_tag.container.gtm_container
+  - imperva_cache_purger.settings
