--- a/config/clecotools/default/core.entity_form_display.user.user.default.yml
+++ b/config/clecotools/default/core.entity_form_display.user.user.default.yml
@@ -4,9 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.user.user.field_display_name
+    - field.field.user.user.field_last_password_reset
+    - field.field.user.user.field_password_expiration
+    - field.field.user.user.field_pending_expire_sent
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
+    - datetime
     - image
     - path
     - user
@@ -35,6 +39,19 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_last_password_reset:
+    type: datetime_default
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_password_expiration:
+    type: boolean_checkbox
+    weight: 3
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   language:
     weight: 3
     region: content
@@ -60,4 +77,5 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
 hidden:
+  field_pending_expire_sent: true
   langcode: true
