--- a/config/clecotools/default/core.entity_view_display.user.user.compact.yml
+++ b/config/clecotools/default/core.entity_view_display.user.user.compact.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.user.compact
     - field.field.user.user.field_display_name
+    - field.field.user.user.field_last_password_reset
+    - field.field.user.user.field_password_expiration
+    - field.field.user.user.field_pending_expire_sent
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -30,6 +33,9 @@ content:
     region: content
 hidden:
   field_display_name: true
+  field_last_password_reset: true
+  field_password_expiration: true
+  field_pending_expire_sent: true
   langcode: true
   member_for: true
   search_api_excerpt: true
