--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -2,7 +2,6 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   address: 0
-  acquia_purge: 0
   acquia_search: 0
   admin_toolbar: 0
   advagg: 0
@@ -80,6 +79,7 @@ module:
   image_captcha: 0
   image_effects: 0
   imagemagick: 0
+  imperva_cache_purger: 0
   inline_entity_form: 0
   jquery_ui: 0
   jquery_ui_datepicker: 0
@@ -106,12 +106,15 @@ module:
   page_cache: 0
   paragraphs_library: 0
   paragraphs_type_permissions: 0
+  password_policy_character_types: 0
+  password_policy_length: 0
   path: 0
   path_alias: 0
   path_redirect_import: 0
   pdfpreview: 0
   purge: 0
   purge_queuer_coretags: 0
+  purge_ui: 0
   quick_node_clone: 0
   quickedit: 0
   rabbit_hole: 0
@@ -154,6 +157,7 @@ module:
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
+  password_policy: 10
   views: 10
   paragraphs: 11
   standard: 1000
