--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -83,6 +83,7 @@ module:
   image_captcha: 0
   image_effects: 0
   imagemagick: 0
+  imperva_cache_purger: 0
   inline_entity_form: 0
   jquery_ui: 0
   jquery_ui_datepicker: 0
@@ -109,6 +110,8 @@ module:
   page_cache: 0
   paragraphs_library: 0
   paragraphs_type_permissions: 0
+  password_policy_character_types: 0
+  password_policy_length: 0
   path: 0
   path_alias: 0
   pdfpreview: 0
@@ -158,6 +161,7 @@ module:
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
+  password_policy: 10
   views: 10
   paragraphs: 11
   standard: 1000
