APEX-264: Homepage slider BE

--- a/config/apextoolgroup/default/node.type.slider.yml
+++ b/config/apextoolgroup/default/node.type.slider.yml
@@ -15,4 +15,4 @@ description: 'It is used for Homepage Slider section'
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
