--- a/config/clecotools/default/user.role.anonymous.yml
+++ b/config/clecotools/default/user.role.anonymous.yml
@@ -57,6 +57,7 @@ permissions:
   - 'view paragraph content faqs_group'
   - 'view paragraph content faqs_section'
   - 'view paragraph content featured_block'
+  - 'view paragraph content featured_product_item'
   - 'view paragraph content featured_products'
   - 'view paragraph content featured_section'
   - 'view paragraph content find_a_distributor'
