--- a/config/clecotools/default/field.field.node.enhanced_product.field_downloads.yml
+++ b/config/clecotools/default/field.field.node.enhanced_product.field_downloads.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_downloads
-    - media.type.product_downloads
     - node.type.enhanced_product
 id: node.enhanced_product.field_downloads
 field_name: field_downloads
@@ -17,13 +16,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:media'
+  handler: views
   handler_settings:
-    target_bundles:
-      product_downloads: product_downloads
-    sort:
-      field: _none
-      direction: ASC
-    auto_create: false
-    auto_create_bundle: ''
+    view:
+      view_name: entity_reference_product_downloads
+      display_name: entity_reference_product_downloads
+      arguments: {  }
 field_type: entity_reference
