--- a/config/clecotools/default/field.field.node.enhanced_product.field_product_models.yml
+++ b/config/clecotools/default/field.field.node.enhanced_product.field_product_models.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_product_models
     - node.type.enhanced_product
-    - node.type.product_model
 id: node.enhanced_product.field_product_models
 field_name: field_product_models
 entity_type: node
@@ -17,13 +16,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: views
   handler_settings:
-    target_bundles:
-      product_model: product_model
-    sort:
-      field: _none
-      direction: ASC
-    auto_create: false
-    auto_create_bundle: ''
+    view:
+      view_name: entity_reference_product_models
+      display_name: entity_reference_product_models
+      arguments: {  }
 field_type: entity_reference
