APEX-264: Homepage slider implementation

--- a/config/apextoolgroup/default/views.view.homepage_slider.yml
+++ b/config/apextoolgroup/default/views.view.homepage_slider.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_slider_link
     - node.type.slider
   module:
+    - link
     - linkit
     - node
     - text
@@ -438,7 +439,7 @@ display:
           click_sort_column: value
           type: text_summary_or_trimmed
           settings:
-            trim_length: 600
+            trim_length: 500
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -499,14 +500,80 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: uri
-          type: linkit
+          type: link
           settings:
             trim_length: 80
-            url_only: false
+            url_only: true
             url_plain: true
             rel: '0'
             target: '0'
-            linkit_profile: default
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        field_slider_link_1:
+          id: field_slider_link_1
+          table: node__field_slider_link
+          field: field_slider_link
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: '{{ field_slider_link_1__title }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: uri
+          type: link
+          settings:
+            trim_length: 80
+            url_only: false
+            url_plain: false
+            rel: '0'
+            target: '0'
           group_column: ''
           group_columns: {  }
           group_rows: true
