--- a/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
+++ b/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
@@ -32,14 +32,13 @@ global:
     - core/jquery
     - core/jquery.once
 
-
-brand-timeline:
+homepage-slider:
   css:
     theme:
       //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css: { type: external, minified: true }
   js:
     //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js: { type: external, minified: true }
-    js/brand-timeline.js: {}
+    js/homepage-slider.js: {}
 
   dependencies:
     - core/drupal
