Apex-236: Market sub pages styling.

--- a/config/apextoolgroup/default/views.view.market_other_blocks.yml
+++ b/config/apextoolgroup/default/views.view.market_other_blocks.yml
@@ -255,7 +255,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
-      css_class: 'market-other wrapper-content'
+      css_class: 'market-other wrapper-content container'
       header: {  }
       footer: {  }
       display_extenders: {  }
